improved and documented migrations
